--- a/GameOrder/templates/includes/header.html
+++ b/GameOrder/templates/includes/header.html
@@ -3,12 +3,18 @@
 <header>
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'registration:login' %}">
+      <a class="navbar-brand" href="{% url 'main:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30"
           class="d-inline-block align-top" alt="">
         GameOrder
       </a>
       <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link {% if view_name == 'main:index' %}
+            active{% endif %}" href="{% url 'main:index' %}">
+            Главная
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link {% if view_name == 'admin_panel:tables' %}
             active{% endif %}" href="{% url 'admin_panel:tables' %}">
