--- a/GameOrder/templates/registration/registration.html
+++ b/GameOrder/templates/registration/registration.html
@@ -1,28 +1,27 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-  Авторизация
+  Регистрация
 {% endblock %}
 {% block content %}
   <div class="container mt-5">
-    <h2>Вход</h2>
-    <form method="POST" action="{% url 'registration:login' %}">
+    <h2>Регистрация</h2>
+    <form method="POST" action="{% url 'registration:register' %}">
         {% csrf_token %}
         <div class="form-group">
             <label for="username">Логин</label>
-            <input type="text" class="form-control"
-              id="username" name="username" required>
+            <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="form-group">
             <label for="password">Пароль</label>
-            <input type="password" class="form-control"
-              id="password" name="password" required>
+            <input type="password" class="form-control" id="password" name="password" required>
         </div>
-        <button type="submit" class="btn btn-primary mt-3">Войти</button>
+        <div class="form-group">
+            <label for="full_name">Полное имя</label>
+            <input type="text" class="form-control" id="full_name" name="full_name" required>
+        </div>
+        <button type="submit" class="btn btn-primary mt-3">Зарегистрироваться</button>
     </form>
-    <div class="text-center mt-3">
-        <p>Еще нет аккаунта? <a href="{% url 'registration:register' %}">Зарегистрироваться</a></p>
-    </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
