Update text on index page

--- a/GameOrder/templates/main/index.html
+++ b/GameOrder/templates/main/index.html
@@ -7,8 +7,8 @@
   <section class="bg-primary text-white text-center py-5">
     <div class="container">
       <h1 class="display-4">Добро пожаловать в Game Order!</h1>
-      <p class="lead">У нас вы можете заказать популярные игры быстро и удобно!</p>
-      <a href="{% url 'order_page:order' %}" class="btn btn-light btn-lg mt-3">Заказать игру</a>
+      <p class="lead">Мы создаем уникальные игры на заказ по вашим требованиям!</p>
+      <a href="{% url 'order_page:order' %}" class="btn btn-light btn-lg mt-3">Заказать разработку</a>
     </div>
   </section>
 
@@ -19,24 +19,24 @@
         <div class="col-md-4">
           <div class="card border-0">
             <div class="card-body">
-              <h5 class="card-title">Быстрая доставка</h5>
-              <p class="card-text">Мы гарантируем доставку вашего заказа в кратчайшие сроки.</p>
+              <h5 class="card-title">Индивидуальный подход</h5>
+              <p class="card-text">Мы разрабатываем игры, которые полностью соответствуют вашим пожеланиям и идеям.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card border-0">
             <div class="card-body">
-              <h5 class="card-title">Оригинальные игры</h5>
-              <p class="card-text">Только лицензионные игры от лучших разработчиков.</p>
+              <h5 class="card-title">Современные технологии</h5>
+              <p class="card-text">Используем передовые технологии и инструменты, чтобы ваши игры были на высоте.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card border-0">
             <div class="card-body">
-              <h5 class="card-title">Поддержка 24/7</h5>
-              <p class="card-text">Наша команда готова помочь вам в любое время суток.</p>
+              <h5 class="card-title">Полная поддержка</h5>
+              <p class="card-text">Мы сопровождаем вас на всех этапах разработки и обеспечиваем техническую поддержку.</p>
             </div>
           </div>
         </div>
