--- a/GameOrder/templates/main/index.html
+++ b/GameOrder/templates/main/index.html
@@ -8,7 +8,7 @@
     <div class="container">
       <h1 class="display-4">Добро пожаловать в Game Order!</h1>
       <p class="lead">Мы создаем уникальные игры на заказ по вашим требованиям!</p>
-      <a href="{% url 'order_page:order' %}" class="btn btn-light btn-lg mt-3">Заказать разработку</a>
+      <a href="{% url 'orders:order' %}" class="btn btn-light btn-lg mt-3">Заказать разработку</a>
     </div>
   </section>
 
