--- a/GameOrder/templates/registration/registration.html
+++ b/GameOrder/templates/registration/registration.html
@@ -10,15 +10,46 @@
         {% csrf_token %}
         <div class="form-group">
             <label for="username">Логин</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+            <input type="text"
+                   class="form-control"
+                   id="username"
+                   name="username"
+                   required>
         </div>
         <div class="form-group">
             <label for="password">Пароль</label>
-            <input type="password" class="form-control" id="password" name="password" required>
+            <input type="password"
+                   class="form-control"
+                   id="password"
+                   name="password"
+                   required>
         </div>
         <div class="form-group">
             <label for="full_name">Полное имя</label>
-            <input type="text" class="form-control" id="full_name" name="full_name" required>
+            <input type="text"
+                   class="form-control"
+                   id="full_name"
+                   name="full_name"
+                   placeholder="Иванов Иван Иванович"
+                   required>
+        </div>
+        <div class="form-group">
+          <label for="phone_number">Телефон</label>
+          <input type="tel"
+                 class="form-control"
+                 id="phone_number"
+                 name="phone_number"
+                 placeholder="+7(123)456-78-90" 
+                 required>
+        </div>
+        <div class="form-group">
+          <label for="email">Электронная почта</label>
+          <input type="email"
+                 class="form-control"
+                 id="email"
+                 name="email"
+                 placeholder="mail@example.com"
+                 required>
         </div>
         <button type="submit" class="btn btn-primary mt-3">Зарегистрироваться</button>
     </form>
@@ -27,4 +58,14 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.5/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      Inputmask({
+        mask: "+7(999)999-99-99",
+        placeholder: "_",
+        showMaskOnHover: false
+      }).mask(document.getElementById('phone_number'));
+    });
+  </script>
 {% endblock %}
